# WorkTracker2

./: .gitignore  CMakeLists.txt  README.md  WorkTracker2.pro
WorkTracker2Shared/: CMakeLists.txt  WorkTracker2Shared.pro
WorkTracker2Shared/include/: worktracker2_global.h
WorkTracker2Shared/include/core/: constants.h  duration.h  helper.h  logging.h
WorkTracker2Shared/include/data/: taskrepository.h  workdayrepository.h
WorkTracker2Shared/include/data/sql/: sqldatasource.h
WorkTracker2Shared/include/data/xml/: xmldatasource.h  xmlrepository.h  xmltaskrepository.h  xmlworkdayrepository.h
WorkTracker2Shared/include/model/: task.h  timeslot.h  workday.h  worktask.h
WorkTracker2Shared/src/core/: constants.h  duration.cpp  duration.h  helper.h
WorkTracker2Shared/src/data/: WorkdayRepository.h  datasource.cpp  taskrepository.h  workdayrepository.h
WorkTracker2Shared/src/data/xml/: xmldatasource.cpp  xmldatasource.h  xmlrepository.cpp  xmlrepository.h  xmltaskrepository.cpp  xmltaskrepository.cpp.autosave  xmltaskrepository.h  xmlworkdayrepository.cpp  xmlworkdayrepository.h
WorkTracker2Shared/src/model/: task.cpp  task.h  timeslot.cpp  timeslot.h  workday.cpp  workday.h  worktask.cpp  worktask.h
wt2-shared/: CMakeLists.txt  WorkTracker2Shared.pro
wt2-shared-test/: CMakeLists.txt  main.cpp  testrunner.h
wt2-shared-test/data/: testdatasource.cpp  testdatasource.h
wt2-shared/include/core/: constants.h  duration.h
wt2-shared/include/data/: datasource.h
wt2-shared/include/data/sql/: sqldatasource.h  sqltaskrepository.h
wt2-shared/include/data/xml/: xmlrepository.h
wt2-shared/src/core/: duration.cpp  logging.cpp
wt2-shared/src/data/: datasource.cpp
wt2-shared/src/data/sql/: sqldatasource.cpp  sqltaskrepository.cpp
wt2-shared/src/data/xml/: xmldatasource.cpp
wt2-shared/src/model/: task.cpp
